k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myschool-frontend
  namespace: myschool-backend
spec:
  type: ClusterIP

  selector:
    app: myschool-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80
